librbd: handle DNE from immutable-object-cache

Fixes: https://tracker.ceph.com/issues/46581
Signed-off-by: Mykola Golub <mgolub@suse.com>