src/test/librbd/cache/test_mock_ParentCacheObjectDispatch.cc
@@ -9,6 +9,7 @@
 #include "include/Context.h"
 #include "tools/immutable_object_cache/CacheClient.h"
 #include "test/immutable_object_cache/MockCacheDaemon.h"
+#include "librbd/io/Utils.h"
 #include "librbd/cache/ParentCacheObjectDispatch.h"
 #include "test/librbd/test_mock_fixture.h"
 #include "test/librbd/mock/MockImageCtx.h"
@@ -21,11 +22,9 @@ namespace {
 
 struct MockParentImageCacheImageCtx : public MockImageCtx {
   MockParentImageCacheImageCtx(ImageCtx& image_ctx)
-   : MockImageCtx(image_ctx), shared_cache_path("/tmp/socket/path"){
+   : MockImageCtx(image_ctx) {
   }
   ~MockParentImageCacheImageCtx() {}
-
-  std::string shared_cache_path;
 };
 
 }; // anonymous namespace
@@ -38,6 +37,39 @@ struct TypeTraits<MockParentImageCacheImageCtx> {
 };
 
 }; // namespace cache
+
+namespace io {
+namespace util {
+
+namespace {
+
+struct Mock {
+  static Mock* s_instance;
+
+  Mock() {
+    s_instance = this;
+  }
+
+  MOCK_METHOD8(read_parent,
+               void(librbd::MockParentImageCacheImageCtx *, uint64_t, uint64_t,
+                    uint64_t, librados::snap_t, const ZTracer::Trace &,
+                    ceph::bufferlist*, Context*));
+};
+
+Mock *Mock::s_instance = nullptr;
+
+} // anonymous namespace
+
+template<> void read_parent(
+    librbd::MockParentImageCacheImageCtx *image_ctx, uint64_t object_no,
+    uint64_t off, uint64_t len, librados::snap_t snap_id,
+    const ZTracer::Trace &trace, ceph::bufferlist* data, Context* on_finish) {
+  Mock::s_instance->read_parent(image_ctx, object_no, off, len, snap_id, trace,
+                                data, on_finish);
+}
+
+} // namespace util
+} // namespace io
 
 }; // namespace librbd
 
@@ -57,6 +89,7 @@ using ::testing::WithArgs;
 class TestMockParentCacheObjectDispatch : public TestMockFixture {
 public :
   typedef cache::ParentCacheObjectDispatch<librbd::MockParentImageCacheImageCtx> MockParentImageCache;
+  typedef io::util::Mock MockUtils;
 
   // ====== mock cache client ====
   void expect_cache_run(MockParentImageCache& mparent_image_cache, bool ret_val) {
@@ -100,6 +133,14 @@ public :
         auto ack = new ObjectCacheReadReplyData(RBDSC_READ_REPLY, 0, cache_path);
         on_finish.release()->complete(ack);
       })));
+  }
+
+  void expect_read_parent(MockUtils &mock_utils, uint64_t object_no,
+                          uint64_t off, uint64_t len, librados::snap_t snap_id,
+                          int r) {
+    EXPECT_CALL(mock_utils,
+                read_parent(_, object_no, off, len, snap_id, _, _, _))
+      .WillOnce(WithArg<7>(CompleteContext(r, static_cast<asio::ContextWQ*>(nullptr))));
   }
 
   void expect_cache_close(MockParentImageCache& mparent_image_cache, int ret_val) {
@@ -330,6 +371,58 @@ TEST_F(TestMockParentCacheObjectDispatch, test_read) {
   io::DispatchResult dispatch_result;
   ceph::bufferlist read_data;
   mock_parent_image_cache->read(0, 0, 4096, CEPH_NOSNAP, 0, {}, &read_data,
+                                nullptr, nullptr, &dispatch_result, nullptr,
+                                &on_dispatched);
+  ASSERT_EQ(0, on_dispatched.wait());
+
+  mock_parent_image_cache->get_cache_client()->close();
+  mock_parent_image_cache->get_cache_client()->stop();
+  delete mock_parent_image_cache;
+}
+
+TEST_F(TestMockParentCacheObjectDispatch, test_read_dne) {
+  librbd::ImageCtx* ictx;
+  ASSERT_EQ(0, open_image(m_image_name, &ictx));
+  MockParentImageCacheImageCtx mock_image_ctx(*ictx);
+  mock_image_ctx.child = &mock_image_ctx;
+
+  auto mock_parent_image_cache = MockParentImageCache::create(&mock_image_ctx);
+
+  expect_cache_run(*mock_parent_image_cache, 0);
+  C_SaferCond conn_cond;
+  Context* handle_connect = new LambdaContext([&conn_cond](int ret) {
+    ASSERT_EQ(ret, 0);
+    conn_cond.complete(0);
+  });
+  expect_cache_async_connect(*mock_parent_image_cache, 0, handle_connect);
+  Context* ctx = new LambdaContext([](bool reg) {
+    ASSERT_EQ(reg, true);
+  });
+  expect_cache_register(*mock_parent_image_cache, ctx, 0);
+  expect_io_object_dispatcher_register_state(*mock_parent_image_cache, 0);
+  expect_cache_close(*mock_parent_image_cache, 0);
+  expect_cache_stop(*mock_parent_image_cache, 0);
+
+  mock_parent_image_cache->init();
+  conn_cond.wait();
+
+  ASSERT_EQ(mock_parent_image_cache->get_dispatch_layer(),
+            io::OBJECT_DISPATCH_LAYER_PARENT_CACHE);
+  expect_cache_session_state(*mock_parent_image_cache, true);
+  ASSERT_EQ(mock_parent_image_cache->get_cache_client()->is_session_work(),
+            true);
+
+  EXPECT_CALL(*(mock_parent_image_cache->get_cache_client()), is_session_work())
+    .WillOnce(Return(true));
+
+  expect_cache_lookup_object(*mock_parent_image_cache, "");
+
+  MockUtils mock_utils;
+  expect_read_parent(mock_utils, 0, 0, 4096, CEPH_NOSNAP, 0);
+
+  C_SaferCond on_dispatched;
+  io::DispatchResult dispatch_result;
+  mock_parent_image_cache->read(0, 0, 4096, CEPH_NOSNAP, 0, {}, nullptr,
                                 nullptr, nullptr, &dispatch_result, nullptr,
                                 &on_dispatched);
   ASSERT_EQ(0, on_dispatched.wait());
